sample-apis/TodoAPI/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-api
  namespace: conference-gw
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - todoapi-ingress.jmasengeshoservices.com
    # secretName: nginx-cert
  rules:
  - host: todoapi-ingress.jmasengeshoservices.com
    http:
      paths:
      - backend:
          service: 
            name: todo-api
            port: 
              number: 80
        pathType: Prefix
        path: /(.*)
